Update send mail and whatsapp